# NeuroEvolution

./: .gitignore  README.md  conda-requirements.txt  pyproject.toml  temp.txt  testing.ipynb  testing.py
NeuroEvolution/: test1.py  test2.py
NeuroEvolution/datasets/: create.py  explore.py  load.py  normalize.ipynb
NeuroEvolution/eval/: inference.py
NeuroEvolution/evolution/: evolve.py  temp_evolve.py
NeuroEvolution/models/: model_loader.py  models.py
NeuroEvolution/models/jax/: cnn_jax.py  vit_jax.py
NeuroEvolution/models/torch/: cnn_torch.py  linear_classifier_torch.py  vit_torch.py
NeuroEvolution/train/: torch_train.py
NeuroEvolution/training/: torch_train.py
NeuroEvolution/utils/: device.py  dir.py  params.py  speed.py  timed.py  useful.py
scripts/: install.sh  train.sh
