[project]
name = "NeuroEvolution"
version = "0.1.0"
description = "neural network trainer using evolutionary techniques"
authors = [{name="giyushino", email="allanzhang440@gmail.com" }]

requires-python = ">=3.8"
dependencies = [
    "datasets==3.5.1",
    "matplotlib==3.10.1",
    "flax==0.10.6", 
    "optax==0.2.4", 
    "einops==0.8.1"
]

